n/a - January 5, 2005
	* Attempted to simplify network bootup files (Nathan Coulson)
	* Modified mountkernfs to use mountpoint (Nathan Coulson)
	* Assuming sysfs is always mounted (Nathan Coulson)
	* Moved fakemount to below mounting (Nathan Coulson)
	* Removed -t noramfs from umount, as we now use tmpfs (Nathan Coulson)

n/a - January 2, 2005
	* Fixed statusproc output. (DJ Lucas)

3.1.0 - December 31, 2004
	* fixed textoutput
	* Tagged as 3.1.0

n/a - December 30, 2004
	* Fixed name of LSB Functions file
	* Changed boot_mesg to act like echo instead of echo -n, boot_mesg now
	  takes the -n argument if you do not wish to goto the next line

3.0.1 - December 25, 2004
	* Released as 3.0.1

n/a - December 20, 2004
	* Cleaned up header.
	* Added RaQ2 Patch

n/a - December 16, 2004
	* Fixed a text typo in udev, tmpfs instead of ramfs (Steve Crosby)

n/a - December 14, 2004
	* Fixed a warning with find in cleanfs


3.0 - December 8, 2004

n/a - December 5, 2004
	* Moved bootlog to use local2 service to avoide conflict with
	  dhcpcd (DJ Lucas)

3.0-rc1 - December 1, 2004
	* rc-Interactive added (DJ Lucas)
	* rc-Interactive moved to contrib (Nathan Coulson)

n/a - November 27, 2004
	* Moved bootlog to use local1 to avoid conflict with ppd (DJ Lucas)

n/a - November 25, 2004
	* Added consolelog to contrib/sysconfig (DJ Lucas)
	* Rewrite of line wraping in boot_mesg and various fixes
	  related to boot_mesg changes (DJ Lucas, Alexander Patrakov)
	* syslog-ng is now installed by default (Jeremy Utley)
	* hotplug is now installed by default (Jeremy Utley)
	* udev now uses /sbin/hotplug as the default hotplug handler (Nathan Coulson)
	* udev now mounts a tmpfs instead of a ramfs onto /dev,
	  as suggested by Greg K-H (Nathan Coulson)
	* Created contrib/lsb, and added a LSB compliant functions file
	  (Nathan Coulson, and Alexander Patrakov)
	* Modified find [requires find 4.2.3+] (Matthew Burgess)

n/a - November 20, 2004